--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "express": "^4.17.3"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
